--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -433,3 +433,30 @@ div.article {
 .cardinality > text {
     font-size: 12px;
 }
+
+.target-highlight:target, h1:target, h2:target, h3:target, h4:target, h5:target, h6:target {
+    background-color: #ffedd9;
+    transition-duration: 2s;
+    &::after {
+        content: " (URL redirected here)";
+        font-size: 10px;
+        float: right;
+        padding-top: 1.1%;
+    }
+}
+
+// tables {{{
+table, th, tr, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 3px;
+} 
+//tbody>tr:nth-child(even) {
+    //background-color: adjust-color($pink-secondary, $saturation: -46%, $lightness: 20%);
+//}
+table {
+    margin-top: 2px;
+    margin-bottom: 8px;
+}
+// }}}
+// vim:sw=4
