Improve tag list, start new note, declare notes on tags

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -459,4 +459,13 @@ table {
     margin-bottom: 8px;
 }
 // }}}
+// Tag list.html {{{
+.tag-container {
+    float: left;
+    width: 200px;
+    background-color: #fafafa;
+    margin: 10px;
+    padding: 10px;
+}
+// }}}
 // vim:sw=4
