--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -13,7 +13,7 @@
     <div class="comments">
         <hr>
         <h2 style="padding-top: 20px !important;">Comments</h2>
-        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/source/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember to keep this in mind while posting a comment.</p></i>
+        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/source/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
 
         <script src="https://utteranc.es/client.js"
                 repo="LunarWatcher/lunarwatcher.github.io"
@@ -23,7 +23,7 @@
                 crossorigin="anonymous"
                 async>
         </script>
-        <noscript>You've disabled JavaScript, which the comment system makes use of to load them on the site. The comment threads can be found <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/issues">in the issues for this repo</a>.</noscript>
+        <noscript>You've disabled JavaScript, which the comment system makes use of to load them on the site. The comment threads can be found <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/issues">in the issues for this repo</a>, if you don't trust this site and/or utterances. Note that unless someone has already commented, there isn't an issue made for this page yet.</noscript>
     </div>
 {{ end }}
 
