--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -13,7 +13,7 @@
     <div class="comments">
         <hr>
         <h2 style="padding-top: 20px !important;">Comments</h2>
-        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/source/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
+        <i><p>All comments posted either through utteranc.es or manually on the associated GitHub issue end up on an associated issue in the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io">website GitHub repo</a>, and as such are required to follow the <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/.github/CODE_OF_CONDUCT.md">project code of conduct</a>. Remember this while writing comments.</p></i>
 
         <script src="https://utteranc.es/client.js"
                 repo="LunarWatcher/lunarwatcher.github.io"
