Even fancier tag list

--- a/layouts/tags/tag_list.html
+++ b/layouts/tags/tag_list.html
@@ -8,9 +8,9 @@
 
     {{ .Content }}
 
-    <div class="tag-list">
+    <div class="flex-container">
         {{ range .Pages }}
-        <div class="tag-container">
+        <div class="shade-box" style="min-width: 200px; flex: 0 1 200px;">
             <p><a href="{{ .Permalink }}">#{{ .Title | markdownify }}</a></p>
             {{ if .Params.description }}
                 <p>{{.Params.description}}</p>
