Hook up licenses

--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -28,6 +28,9 @@
                 {{ end }}
             </p>
             {{ end }}
+            {{ if isset . "license" }}
+            <p>License: {{.license}}</p>
+            {{ end }}
             <p>{{ .description | markdownify}}</p>
         </div>
     {{ end }}
