This has to be a warcrime

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,8 +1,11 @@
 <footer class="page-footer">
     <div class="footer-copyright">
         <div class="container" style="overflow: auto;">
-            &copy; Olivia, 2019-2021 (<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>, <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/LICENSE">license</a>)
-            <p class="right">Powered by <a href="https://gohugo.io/">Hugo</a></p>
+            &copy; Olivia, 2019-2021
+            (<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>, <a href="https://github.com/LunarWatcher/lunarwatcher.github.io/blob/master/LICENSE">license</a>)
+            <p class="right">Powered by <a href="https://gohugo.io/">Hugo</a>
+                <!-- Don't click the button. -->
+                (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
         </div>
     </div>
 </footer>
