Add series, document the devlog series, add devlog article

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -208,7 +208,6 @@ h1, h2 {
 header nav {
 
     line-height: 64px;
-    .sidenav { padding-top: 60px; };
     height: 64px;
 
     ul li, .nav-header {
@@ -230,9 +229,10 @@ header nav {
     overflow-x: hidden;
     transition: 1s;
     padding: 0px;
+    padding-top: 60px;
 
     a {
-        padding: 0 16px;
+        padding: 0 24px;
         transition: 0.5s;
         display: block;
         line-height: 64px;
@@ -405,14 +405,6 @@ h3, h4, h5, h6 {
 .post-meta {
     font-size: 14px;
     color: #828282 !important;
-}
-
-.post-tag, .post-tag:visited {
-    @extend .post-meta;
-}
-
-.post-tag:active, .post-tag:hover {
-    color: $pink-light !important;
 }
 
 div.article {
