--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -17,7 +17,7 @@
         {{ range .Pages }}
         <div class="article">
             <h1><a href="{{ .Permalink }}">{{ if .Draft }}{{ T "draft" }}: {{ end }}{{ .Title | markdownify }}</a></h1>
-            <time class="post-meta">{{ .Date.Format "January 2, 2006" }}</time>
+            <time class="post-meta">{{ partial "dformat.html" . }}</time>
             {{ if .Params.Category }}
                 <br><span class="post-meta">Post type: {{ .Params.Category }}</span>
             {{ end }}
@@ -38,4 +38,7 @@
 
 {{ template "_internal/pagination.html" . }}
 
+<!--
+vim:ft=liquid
+-->
 {{ end }}
