--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -84,8 +84,11 @@ ul.pagination li {
 
 // Elements
 blockquote{
+    padding: 11px 0px 9px 10px !important;
+    * {
+        margin: 0px;
+    }
     border-left: 4px solid $pink-primary;
-    padding-left: 10px;
 
     background-color: #ffe8f6;
     border-radius: 4px;
