--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,3 +18,8 @@
 
 <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/blog/feed.xml" | absURL }}" />
 
+<meta property="og:title" content="{{ .Title }}" />
+<meta property="og:url" content="https://lunarwatcher.github.io/newsletter.html" />
+{{ if .Params.description }}
+<meta property="og:description" content="{{ .Params.description }}" />
+{{ end }}
