Reduce strain on GitHub's servers
Not a super fan of using third party CDNs, but I wanna make sure to reduce the changes of hitting the 100GB limit. It's unlikely, admittedly, especially given caching, but still

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -7,9 +7,9 @@
 <!-- Visible metadata -->
 <title>{{ .Title }} | {{ .Site.Title }}</title>
 <!-- Scripts and stylesheets -->
-<script src="{{ (resources.Get "js/jquery.min.js").Permalink }}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {{ if .Params.mermaid }}
-<script src="{{ (resources.Get "js/mermaid.min.js").Permalink }}"></script>
+<script src="https://unpkg.com/browse/mermaid@8.8.0/dist/mermaid.min.js"></script>
 {{ end }}
 
 {{ $base := resources.Get "scss/style.scss" }}
