Add random links

--- a/layouts/404.html
+++ b/layouts/404.html
@@ -3,8 +3,9 @@
 <h3 class="center-header"><a href="{{ "/" | relURL }}">Go home</a></h3>
 
 <script>
+// Shhhhhhhh, no spoiling the fun
 if (window.location.href.includes("/stories/")){
-    window.location.href = "https://www.youtube.com/watch?v=rTgj1HxmUbg";
+    window.location.href = "https://youtube.com/watch?v=" + ["rTgj1HxmUbg","34Ig3X59_qA","ur560pZKRfg"][Math.floor(Math.random()*3)];
 }
 </script>
 {{ end }}
