--- a/layouts/shortcodes/tag.html
+++ b/layouts/shortcodes/tag.html
@@ -1,2 +1,1 @@
-<a href="/tags/{{ safeHTML .Inner }}">#{{ safeHTML .Inner }}</a>
-
+<a href="/tags/{{ safeHTML .Inner }}" class="tag-ref">#{{ safeHTML .Inner }}</a>
