--- a/layouts/partials/tags.html
+++ b/layouts/partials/tags.html
@@ -1,11 +1,12 @@
 {{ $taxonomy := "tags" }}
 {{ with .Param $taxonomy }}
-    <p class="post-meta">Tags:
+    <span class="post-meta">Tags:
     {{ range $index, $tag := . }}
         {{- if gt $index 0 }}, {{ end -}}
         {{ with $.Site.GetPage (printf "/%s/%s" $taxonomy ($tag | urlize)) -}}
             <a class="post-tag" href="{{ .Permalink }}">#{{ $tag }}</a>
         {{- end -}}
     {{- end -}}
-    </p>
+    </span>
+    <br>
 {{ end }}
