--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -3,6 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
 <meta http-equiv="Content-language" content = "en-GB"/>
+<meta name="google-site-verification" content="KaQgLiY-qEmQHXuIUp_o7p7cH_8rgleUTNxnZmvV5bA" />
 
 <!-- Visible metadata -->
 <title>{{ .Title }} | {{ .Site.Title }}</title>
