"you can only use shortcodes in the content dir" my ass

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
             &copy; Olivia, 2019-2021
             (<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>,
             <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">license</a>,
-            <a href="{{<ref path="/privacy.html">}}">privacy policy</a>)
+            <a href="/privacy.html">privacy policy</a>)
             <p class="right">Powered by <a href="https://gohugo.io/">Hugo</a>
                 <!-- Don't click the button. -->
                 (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
