--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
 
 <link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/blog/feed.xml" | absURL }}" />
 
-<!-- OpenGraph {{{ -->
+<!-- OpenGraph ((( -->
 <meta property="og:title" content="{{ .Title }}" />
 <meta property="og:url" content="{{ .Permalink }}" />
 {{ if .Params.description }}
@@ -32,8 +32,11 @@
 <meta property="og:site_name" content="{{ site.Title }}" />
 <meta property="og:locale" content="{{ site.languageCode }}" />
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/4/48/Gay_Pride_Flag.svg" />
-<!-- }}} -->
-<!-- Twitter {{{ -->
+<!-- ))) -->
+<!-- Twitter ((( -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:creator" content="@{{ Site.params.twitter }}"
-<!-- }}} -->
+<!-- ))) -->
+<!--
+vim:fmr=(((,)))
+-->
