--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -35,7 +35,7 @@
 <!-- ))) -->
 <!-- Twitter ((( -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:creator" content="@{{ Site.params.twitter }}"
+<meta property="twitter:creator" content="@{{ site.params.twitter }}"
 <!-- ))) -->
 <!--
 vim:fmr=(((,)))
