Comment because reasons

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -31,6 +31,7 @@
 {{ end }}
 <meta property="og:site_name" content="{{ site.Title }}" />
 <meta property="og:locale" content="{{ site.languageCode }}" />
+<!-- This falls under public domain -->
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/4/48/Gay_Pride_Flag.svg" />
 <!-- ))) -->
 <!-- Twitter ((( -->
