--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.languageCode }}">
+<html lang="{{ .Site.languageCode }}">
     <head>
         {{ partial "head.html" . }}
     </head>
