Looks like upper-case is implied. How iditotic

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -30,7 +30,7 @@
 <meta property="og:description" content="{{ .Summary }}"
 {{ end }}
 <meta property="og:site_name" content="{{ site.Title }}" />
-<meta property="og:locale" content="{{ site.languageCode }}" />
+<meta property="og:locale" content="{{ site.LanguageCode }}" />
 <!-- This falls under public domain -->
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/4/48/Gay_Pride_Flag.svg" />
 <!-- ))) -->
