Didn't close le tag

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -27,7 +27,7 @@
 {{ if .Params.description }}
 <meta property="og:description" content="{{ .Params.description }}" />
 {{ else }}
-<meta property="og:description" content="{{ .Summary }}"
+<meta property="og:description" content="{{ .Summary }}" />
 {{ end }}
 <meta property="og:site_name" content="{{ site.Title }}" />
 <meta property="og:locale" content="{{ site.LanguageCode }}" />
