These error messages are the single worst errors I've ever seen in my entire life

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -36,7 +36,7 @@
 <!-- ))) -->
 <!-- Twitter ((( -->
 <meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:creator" content="@{{ site.params.twitter }}"
+<meta property="twitter:creator" content="@{{ site.params.twitter }}" />
 <!-- ))) -->
 <!--
 vim:fmr=(((,)))
