svgs aren't valid og:images :rolling_eyes:

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -32,7 +32,7 @@
 <meta property="og:site_name" content="{{ site.Title }}" />
 <meta property="og:locale" content="{{ site.LanguageCode }}" />
 <!-- This falls under public domain -->
-<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/4/48/Gay_Pride_Flag.svg" />
+<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/LGBT_Rainbow_Flag.png/1280px-LGBT_Rainbow_Flag.png" />
 <!-- ))) -->
 <!-- Twitter ((( -->
 <meta property="twitter:card" content="summary_large_image" />
