--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -34,7 +34,7 @@
 <!-- This falls under public domain -->
 <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/LGBT_Rainbow_Flag.png/1280px-LGBT_Rainbow_Flag.png" />
 <!-- ))) -->
-<!-- Twitter ((( -->
+<!-- Twitter cards because standards ((( -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:creator" content="@{{ .Site.Params.twitter }}" />
 <!-- ))) -->
