--- a/layouts/partials/socialmedia.html
+++ b/layouts/partials/socialmedia.html
@@ -1,7 +1,7 @@
 <ul>
     <li class="target-highlight" id="somediscord"><a href="https://discord.gg/{{ .Site.Params.discord }}">Discord server</a></li>
-    <li class="target-highlight" id="somediscordusr">Discord username: {{.Site.Params.discord_user}}</li>
-    <li class="target-highlight" id="somegithub"><a href="https://github.com/LunarWatcher">GitHub</a></li>
-    <li class="target-highlight" id="somedeviantart"><a href="https://{{.Site.Params.deviantart}}.deviantart.com">DeviantArt</a></li>
-    <li class="target-highlight" id="someblog"><a href="https://lunarwatcher.github.io/posts/feed.xml">Blog RSS feed</a></li>
+    <li class="target-highlight" id="somestack"><a href="https://stackoverflow.com/users/6296561">Stack Overflow</a></li>
+    <li class="target-highlight" id="somediscordusr"><b>Discord</b>: @{{.Site.Params.discord_user}}</b>
+    <li class="target-highlight" id="somegithub"><b>GitHub: </b><a href="https://github.com/LunarWatcher">LunarWatcher</a></li>
+    <li class="target-highlight" id="email"><b>Email: </b>Listed on <a href="https://github.com/LunarWatcher">GitHub</a> (requires a GitHub account). <a href="{{.Site.Params.email_proxy}}">Alternate</a> (requires a Wikipedia account)</li>
 </ul>
