--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,13 +1,19 @@
 <footer class="page-footer">
     <div class="footer-copyright">
-        <div class="container" style="overflow: auto;">
-            &copy; Olivia, 2019-2023
-            (<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>,
-            <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">license</a>,
-            <a href="/privacy.html">privacy policy</a>)
-            <p class="right">Powered by <a href="https://gohugo.io/">Hugo</a>
-                <!-- Don't click the button. -->
-                (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
+        <div class="container flex-container" style="overflow: auto;">
+            <div class="flex-item">
+                &copy; Olivia, 2019-2023
+                (<a href="https://github.com/LunarWatcher/LunarWatcher.github.io/tree/master">Website source</a>,
+                <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE">license</a>,
+                <a href="/privacy.html">privacy policy</a>)
+
+                <p>Content licensed under <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE#L32">CC-By-SA 4.0</a></p>
+            </div>
+            <div class="flex-item">
+                <p>Powered by <a href="https://gohugo.io/">Hugo</a>
+                    <!-- Don't click the button. -->
+                    (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
+            </div>
         </div>
     </div>
 </footer>
