--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -19,7 +19,7 @@
 {{ $style := $base | resources.ToCSS | resources.Minify }}
 <link rel="stylesheet" type="text/css" href="{{ $style.Permalink }}" />
 
-<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/blog/feed.xml" | absURL }}" />
+<link rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" href="{{ "/posts/feed.xml" | absURL }}" />
 
 <!-- OpenGraph ((( -->
 <meta property="og:title" content="{{ .Title }}" />
@@ -31,11 +31,6 @@
 {{ end }}
 <meta property="og:site_name" content="{{ site.Title }}" />
 <meta property="og:locale" content="{{ site.LanguageCode }}" />
-<!-- This falls under public domain -->
-<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8a/LGBT_Rainbow_Flag.png/1280px-LGBT_Rainbow_Flag.png" />
-<!-- ))) -->
-<!-- Twitter cards because standards ((( -->
-<meta property="twitter:card" content="summary_large_image" />
 <!-- ))) -->
 <!--
 vim:fmr=(((,)))
