Why did I think it was a good idea to do this over ssh?

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -9,12 +9,12 @@
 
                 <p>Content licensed under <a href="https://github.com/LunarWatcher/LunarWatcher.github.io/blob/master/LICENSE#L32">CC-By-SA 4.0</a></p>
             </div>
-            <div class="flex-item">
-                <p>Powered by <a href="https://gohugo.io/">Hugo</a>
-                    <!-- Don't click the button. -->
-                    (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
-            </div>
         </div>
+    </div>
+    <div class="right">
+        <p>Powered by <a href="https://gohugo.io/">Hugo</a>
+            <!-- Don't click the button. -->
+            (<a href="javascript:uwu()" id="uwu">UwU?</a>)</p>
     </div>
 </footer>
 
